Add types and client for Resolution
Part of #4710

In order to get remote resolution functionality to beta, we're moving it from a separate repository/release to be part of Pipeline. This is the first PR in a sequence moving the code from the Resolution repository into Pipeline.

This also changes the `.resolver.resource` field's name to `.resolver.params` for consistency across our syntax.
