# pkg/apis/pipeline/v1beta1/taskref_validation.go
@@ -41,13 +41,13 @@ func (ref *TaskRef) Validate(ctx context.Context) (errs *apis.FieldError) {
 		if ref.Bundle != "" {
 			errs = errs.Also(apis.ErrMultipleOneOf("bundle", "resolver"))
 		}
-	case ref.Resource != nil:
-		errs = errs.Also(version.ValidateEnabledAPIFields(ctx, "resource", config.AlphaAPIFields).ViaField("resource"))
+	case ref.Params != nil:
+		errs = errs.Also(version.ValidateEnabledAPIFields(ctx, "params", config.AlphaAPIFields).ViaField("params"))
 		if ref.Name != "" {
-			errs = errs.Also(apis.ErrMultipleOneOf("name", "resource"))
+			errs = errs.Also(apis.ErrMultipleOneOf("name", "params"))
 		}
 		if ref.Bundle != "" {
-			errs = errs.Also(apis.ErrMultipleOneOf("bundle", "resource"))
+			errs = errs.Also(apis.ErrMultipleOneOf("bundle", "params"))
 		}
 		if ref.Resolver == "" {
 			errs = errs.Also(apis.ErrMissingField("resolver"))
